--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.application.name=ProductMS
 server.port=1601
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/productdb
-spring.datasource.username=root
-spring.datasource.password=Hencieta@98
+spring.datasource.url=jdbc:mysql://projectdb.c0bq0hokllt0.ap-south-1.rds.amazonaws.com:3306/productdb
+spring.datasource.username=admin
+spring.datasource.password=adminadmin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
